[gd_scene load_steps=7 format=2]

[ext_resource path="res://Images/treeGreen_large.png" type="Texture" id=1]
[ext_resource path="res://Images/treeGreen_twigs.png" type="Texture" id=2]
[ext_resource path="res://Images/treeGreen_small.png" type="Texture" id=3]
[ext_resource path="res://Scripts/treegreen.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 5.59017

[sub_resource type="CircleShape2D" id=2]
radius = 9.2635

[node name="treegreen" type="StaticBody2D"]
script = ExtResource( 4 )

[node name="treeGreen_large" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="treeGreen_small" type="Sprite" parent="."]
visible = false
texture = ExtResource( 3 )

[node name="CollisionSmall" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="CollisionLarge" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="twings" type="Node2D" parent="."]
visible = false

[node name="twigs" type="Sprite" parent="twings"]
texture = ExtResource( 2 )

[node name="twigs2" type="Sprite" parent="twings"]
position = Vector2( 1.74999, 0.500001 )
rotation = -0.366519
scale = Vector2( 1, 1 )
texture = ExtResource( 2 )

[node name="twigs3" type="Sprite" parent="twings"]
position = Vector2( 0.750004, 0 )
rotation = 2.34572
texture = ExtResource( 2 )
